--- a/tutorial/step1-create-gradle-app/gradle.properties
+++ b/tutorial/step1-create-gradle-app/gradle.properties
@@ -1,4 +1,4 @@
-artifactory_plugins_url=http://ubuntu:8081/artifactory/plugins-release
-artifactory_libs_url=http://ubuntu:8081/artifactory/libs-release
+artifactory_plugins_url=http://jfrog.local/artifactory/plugins-release
+artifactory_libs_url=http://jfrog.local/artifactory/libs-release
 artifactory_user=
 artifactory_password=
