--- a/tutorial/step4-create-docker-multi-app-helm-chart/helm/docker-multi-app-chart/templates/deployment.yaml
+++ b/tutorial/step4-create-docker-multi-app-helm-chart/helm/docker-multi-app-chart/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             failureThreshold: 3
             httpGet:
               path: /
-              port: 8181
+              port: {{ .Values.service.port }}
               scheme: HTTP
             initialDelaySeconds: 30
             periodSeconds: 10
@@ -36,7 +36,7 @@ spec:
             timeoutSeconds: 30
           ports:
             - name: http
-              containerPort: 8181
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
       imagePullSecrets:
         {{- if .Values.image.secretName }}
