--- a/tutorial/step4-create-docker-multi-app-helm-chart/helm/docker-multi-app-chart/templates/deployment.yaml
+++ b/tutorial/step4-create-docker-multi-app-helm-chart/helm/docker-multi-app-chart/templates/deployment.yaml
@@ -27,7 +27,7 @@ spec:
           livenessProbe:
             failureThreshold: 3
             httpGet:
-              path: /
+              path: /app
               port: {{ .Values.service.port }}
               scheme: HTTP
             initialDelaySeconds: 30
