--- a/tutorial/step1-create-gradle-app/gradle.properties
+++ b/tutorial/step1-create-gradle-app/gradle.properties
@@ -1,4 +1,4 @@
-#artifactory_plugins_url=http://rt-soleng.jfrog.team/artifactory/plugins-release
+artifactory_plugins_url=http://rt-soleng.jfrog.team/artifactory/plugins-release
 artifactory_libs_url=http://jfrog.local/artifactory/libs-release
 artifactory_user=
 artifactory_password=
