--- a/tutorial/step1-create-gradle-app/gradle.properties
+++ b/tutorial/step1-create-gradle-app/gradle.properties
@@ -1,4 +1,5 @@
-artifactory_plugins_url=http://jfrog.local/artifactory/plugins-release
-artifactory_libs_url=http://jfrog.local/artifactory/libs-release
+#artifactory_plugins_url=http://jfrog.local/artifactory/plugins-release
+#artifactory_libs_url=http://jfrog.local/artifactory/libs-release
 artifactory_user=
 artifactory_password=
+artifactory_contextUrl=http://artifactory-eu.soleng-emea.jfrog.team:80/artifactory
