--- a/tutorial/step1-create-gradle-app/gradle.properties
+++ b/tutorial/step1-create-gradle-app/gradle.properties
@@ -2,4 +2,4 @@
 #artifactory_libs_url=http://jfrog.local/artifactory/libs-release
 artifactory_user=
 artifactory_password=
-artifactory_contextUrl=http://artifactory-eu.soleng-emea.jfrog.team:80/artifactory
+artifactory_contextUrl=http://jfrog.local/artifactory
