--- a/tutorial/step1-create-gradle-app/gradle.properties
+++ b/tutorial/step1-create-gradle-app/gradle.properties
@@ -1,5 +1,5 @@
 #artifactory_plugins_url=http://jfrog.local/artifactory/plugins-release
 #artifactory_libs_url=http://jfrog.local/artifactory/libs-release
-artifactory_user=
-artifactory_password=
+artifactory_user="${int_art_user}"
+artifactory_password="${int_art_apikey}"
 artifactory_contextUrl= "${int_art_url}"
