--- a/tutorial/step1-create-gradle-app/gradle.properties
+++ b/tutorial/step1-create-gradle-app/gradle.properties
@@ -1,4 +1,4 @@
-artifactory_plugins_url="${int_art_url}"/team1-gradle
+artifactory_plugins_url="${int_art_url}"/jcenter-gradle-remote
 artifactory_libs_url="${int_art_url}"/team1-gradle
 artifactory_user="${int_art_user}"
 artifactory_password="${int_art_apikey}"
