--- a/tutorial/step1-create-gradle-app/build.gradle
+++ b/tutorial/step1-create-gradle-app/build.gradle
@@ -66,6 +66,6 @@ task wrapper(type: Wrapper) {
 }
 
 String addBuildNumberFromCI(String version) {
-	def buildNumber = "${run_number}
+	def buildNumber = "${run_number}"
 	return buildNumber ? version + "-" + buildNumber : version
 }
