--- a/tutorial/step1-create-gradle-app/build.gradle
+++ b/tutorial/step1-create-gradle-app/build.gradle
@@ -4,10 +4,10 @@ buildscript {
 	}
 	repositories {
 		maven {
-			url "${artifactory_plugins_url}"
+			url System.getenv().artifactory_plugins_url
 			credentials {
-				username = "${artifactory_user}"
-				password = "${artifactory_password}"
+				username = System.getenv().artifactory_user
+				password = System.getenv().artifactory_password
 			}
 		}
 	}
@@ -39,10 +39,10 @@ targetCompatibility = 1.8
 
 repositories {
 	maven {
-		url "${artifactory_libs_url}"
+		url System.getenv().artifactory_libs_url
 		credentials {
-			username = "${artifactory_user}"
-			password = "${artifactory_password}"
+			username = System.getenv().artifactory_user
+			password = System.getenv().artifactory_password
 		}
 	}
 }
