--- a/tutorial/step1-create-gradle-app/jfrog-gradle.yml
+++ b/tutorial/step1-create-gradle-app/jfrog-gradle.yml
@@ -4,8 +4,8 @@ usePlugin: false
 useWrapper: true
 resolver:
   repo: jcenter-gradle-remote
-  serverID: art
+  serverID: artifactory
 deployer:
   repo: team1-gradle-dev-us
-  serverID: art
+  serverID: artofactory
   deployMavenDescriptors: true
