--- a/tutorial/step1-create-gradle-app/jfrog-gradle.yml
+++ b/tutorial/step1-create-gradle-app/jfrog-gradle.yml
@@ -1,7 +1,7 @@
 version: 1
 type: gradle
 usePlugin: false
-useWrapper: true
+useWrapper: false
 resolver:
   repo: jcenter-gradle-remote
   serverID: artifactory
