--- a/tutorial/step1-create-gradle-app/build.gradle
+++ b/tutorial/step1-create-gradle-app/build.gradle
@@ -1,10 +1,13 @@
 buildscript {
 	ext {
+	        artifactory_url = System.getenv().int_artifactory_url
 		springBootVersion = '1.3.7.RELEASE'
+
+		
 	}
 	repositories {
 		maven {
-			url System.getenv().artifactory_plugins_url
+			url ${artifactory_url}/jcenter-gradle-remote
 			credentials {
 				username = System.getenv().int_artifactory_user
 				password = System.getenv().int_artifactory_apikey
@@ -39,7 +42,7 @@ targetCompatibility = 1.8
 
 repositories {
 	maven {
-		url System.getenv().artifactory_libs_url
+		url ${artifactory_url}/team1-gradle
 		credentials {
 			username = System.getenv().int_artifactory_user
 			password = System.getenv().int_artifactory_apikey
