--- a/tutorial/step1-create-gradle-app/build.gradle
+++ b/tutorial/step1-create-gradle-app/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
 	ext {
-	        artifactory_url = System.getenv().int_artifactory_url
-		springBootVersion = '1.3.7.RELEASE'
+        artifactory_url = System.getenv().int_artifactory_url
+        springBootVersion = '1.3.7.RELEASE'
 
 		
 	}
 	repositories {
 		maven {
-			url artifactory_url/jcenter-gradle-remote
+			url "${artifactory_url}/jcenter-gradle-remote"
 			credentials {
 				username = System.getenv().int_artifactory_user
 				password = System.getenv().int_artifactory_apikey
@@ -42,7 +42,7 @@ targetCompatibility = 1.8
 
 repositories {
 	maven {
-		url artifactory_url/team1-gradle
+		url "${artifactory_url}/team1-gradle"
 		credentials {
 			username = System.getenv().int_artifactory_user
 			password = System.getenv().int_artifactory_apikey
@@ -65,7 +65,7 @@ eclipse {
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '6.0.1'
+	gradleVersion = '3.3'
 }
 
 String addBuildNumberFromCI(String version) {
