--- a/tutorial/step2-create-ui-pkg/package.json
+++ b/tutorial/step2-create-ui-pkg/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frogsui",
   "private": false,
-  "version": "${NpmVersion}",
+  "version": "0.3.0",
   "description": "Sample project for demonstrating npm/bower build pipeline",
   "repository": "http://gitlab.inc.jfrog.local/Alexist/frogs-ui.git",
   "license": "MIT",
