--- a/tutorial/step2-create-ui-pkg/Dockerfile
+++ b/tutorial/step2-create-ui-pkg/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get install --yes nodejs
 RUN apt-get install --yes build-essential
 RUN npm config set strict-ssl false
 RUN npm install shelljs
-#COPY npm_results/angular-animate-1.4.14.tgz /usr/share/nginx/html/frogsui/
+COPY npm_results/angular-animate-1.4.14.tgz /usr/share/nginx/html/frogsui/
 #RUN sed -i "s+http://localhost:9000/+/ws/+g" /usr/share/nginx/html/frogsui/app/app.js
 COPY wrapper.sh /wrapper.sh
 COPY ws.conf /etc/nginx/conf.d/ws.conf
